# zeusircd2

./: Cargo.toml  README.md  config-example.toml  install.sh  motd.txt
.github/workflows/: macos.yml  rust-clippy.yml  rust.yml  windows.yml
src/: command.rs  config.rs  help.rs  main.rs  reply.rs  utils.rs
src/database/: mod.rs  mysql.rs  sqlite.rs
src/state/: channel_cmds.rs  chanserv.rs  conn_cmds.rs  mod.rs  nickserv.rs  rest_cmds.rs  server_communication.rs  srv_query_cmds.rs  structs.rs
