[package]
name = "zeusircd2"
authors = ["Moebius ( Pryan )"]
license = "LGPL-2.1-or-later"
version = "0.0.2"
edition = "2018"
rust-version = "1.84.0"
description = "Next generation ircd"
repository = "https://github.com/Pryancito/zeusircd2"
categories = ["network-programming"]
keywords = ["irc"]

[dependencies]
tokio = { version = "1.45.1", features = [ "full" ] }
tokio-util = { version = "0.7.15", features = [ "codec" ] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
futures = "0.3.31"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
validator = { version = "0.20.0", features = [ "derive" ] }
bytes = "1.10.1"
const-table = "0.1.0"
flagset = "0.4.7"
argon2 = "0.5.3"
rpassword = "7.4.0"
tokio-openssl = { version = "0.6.5", optional = true }
openssl = { version = "0.10.73", optional = true }
lazy_static = "1.5.0"
trust-dns-resolver = { version = "0.23.2", optional = true }
sqlite = { version = "0.37.0", optional = true }
async-trait = "0.1.88"
mysql_async = { version = "0.36.1", optional = true }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
lapin = "2.3"
amq-protocol = "7.1"
amq-protocol-types = "7.1"
serde_json = "1.0.140"
anyhow = "1.0.98"

[features]
default = []
tls = [ "openssl", "tokio-openssl" ]
dns_lookup = [ "trust-dns-resolver" ]
sqlite3 = ["sqlite"]
mysql = ["mysql_async"]

[dependencies.tracing-subscriber]
version = "0.3.1"
default-features = false
features = ["fmt", "ansi", "env-filter", "tracing-log"]

[dev-dependencies]
tokio = { version = "1.45.1", features = [ "full", "test-util" ] }
